# recipes

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  skills-lock.json
.agents/skills/browser/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/pb-api/: SKILL.md
.agents/skills/pb-extend/: SKILL.md
.opencode/tools/: sql.ts
pb/: go.mod  go.sum  modd.conf
pb/pb_migrations/: 1681440081_created_posts.js
rs/: Cargo.toml
rs/src/: db.rs  hello.rs  live.rs  livecrud.rs  main.rs  upload.rs
sk/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
sk/src/: app.scss
sk/src/lib/components/: Dialog.svelte  LoginBadge.svelte  LoginForm.svelte  LoginGuard.svelte  Nav.svelte  Spinner.svelte
sk/src/lib/pocketbase/: LoginBadge.svelte  LoginForm.svelte  index.ts
sk/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
sk/src/routes/components/: config.ts
sk/src/routes/posts/: +page.svelte
sk/src/routes/posts/[id]/: +page.svelte  +page.ts
